<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_setup_4_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs506.accountable.Setup_4_Activity"
    tools:showIn="@layout/activity_setup_4_">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter your Sources of Income"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/incomeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.47"
            android:ems="10"
            android:hint="Income Name"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="incomeNameHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/incomeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="Income Amount"
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="incomeAmountHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.47"
            android:ems="10"
            android:hint="Receiving Date (mm/dd/year)"
            android:maxLength="10"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:onClick="dueDateHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/payPeriodSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="payPeriodHelp"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addIncome"
        android:text="Add Income"
        android:background="@drawable/button_container"
        android:textColor="@drawable/text_container"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="moveNext"
        android:text="Next"
        android:background="@drawable/button_container"
        android:textColor="@drawable/text_container"
        android:textSize="24sp" />

</LinearLayout>
