<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs506.accountable.Update_0_Activity"
    tools:showIn="@layout/activity_update_0_">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_margin="25dp"
        android:text="Select to update:" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/updateBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"
        android:background="@drawable/button_container"
        android:textColor="@drawable/text_container"
        android:text="Balance" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/updateBills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="onClick"
        android:background="@drawable/button_container"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@drawable/text_container"
        android:text="Bills" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/updateIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="onClick"
        android:background="@drawable/button_container"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@drawable/text_container"
        android:text="Income" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/updateGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="onClick"
        android:background="@drawable/button_container"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@drawable/text_container"
        android:text="Goals" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/backToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="onClick"
        android:background="@drawable/button_container"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@drawable/text_container"
        android:text="Back to Home" />

</LinearLayout>
