...
    </LinearLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updateBudget"
        android:text="Update"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</LinearLayout>
...
